{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 712,
  "lineage": "4948dd57-19dd-296c-fa35-382823e2fa60",
  "resources": [
    {
      "module": "module.ec2_testing",
      "mode": "managed",
      "type": "aws_instance",
      "name": "eks_terra_nat_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-078c1149d8ad719a7",
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:instance/i-0b0e08b9701c80fbf",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0e08b9701c80fbf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "anuvind_key_1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c8a8cc70c0e13fe",
            "private_dns": "ip-10-5-3-205.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.3.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8307ee67849bc60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05549b98c926245cf",
            "tags": {
              "Name": "anuvind_nat_test_inst_inPrivate"
            },
            "tags_all": {
              "Name": "anuvind_nat_test_inst_inPrivate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0521ca275b6cb8640"
            ]
          },
          "dependencies": [
            "module.ec2_testing.aws_security_group.anuvind-test_nat_instance_sg",
            "module.nat_ec2_launch.aws_instance.eks_terra_nat_inst",
            "module.vpc_launch.aws_network_interface.public_instance_network_interface",
            "module.vpc_launch.aws_security_group.nat_instance_sg",
            "module.vpc_launch.aws_subnet.eks_privsubnet",
            "module.vpc_launch.aws_subnet.eks_pubsubnet",
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_testing",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "anuvind-test_nat_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:security-group/sg-0521ca275b6cb8640",
            "description": "test-Security group for NAT instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0521ca275b6cb8640",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "anuvind-test-anuvind_nat-instance-sg",
            "name_prefix": "",
            "owner_id": "692107548034",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6d62942fef65a24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.nat_ec2_launch",
      "mode": "managed",
      "type": "aws_instance",
      "name": "eks_terra_nat_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-078c1149d8ad719a7",
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:instance/i-0543e6e15441388de",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0543e6e15441388de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "anuvind_key_1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d75538db84a61b6b"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d75538db84a61b6b",
            "private_dns": "ip-10-5-1-110.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.1.110",
            "public_ip": "54.169.70.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0438b2b61b23e15b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04126f5dd58a7e10f",
            "tags": {
              "Name": "anuvind_nat_instance"
            },
            "tags_all": {
              "Name": "anuvind_nat_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ffd25d0d9a2ab418"
            ]
          },
          "dependencies": [
            "module.vpc_launch.aws_network_interface.public_instance_network_interface",
            "module.vpc_launch.aws_security_group.nat_instance_sg",
            "module.vpc_launch.aws_subnet.eks_pubsubnet",
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_launch",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "EKS_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:internet-gateway/igw-0a78b1e3e0d880c69",
            "id": "igw-0a78b1e3e0d880c69",
            "owner_id": "692107548034",
            "tags": {
              "Name": "anuvind_igw"
            },
            "tags_all": {
              "Name": "anuvind_igw"
            },
            "vpc_id": "vpc-0b6d62942fef65a24"
          },
          "dependencies": [
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_launch",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public_instance_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:network-interface/eni-0d75538db84a61b6b",
            "attachment": [
              {
                "attachment_id": "eni-attach-06d0ab76ddf9314a2",
                "device_index": 0,
                "instance": "i-0543e6e15441388de"
              }
            ],
            "id": "eni-0d75538db84a61b6b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:52:6c:82:c3:3a",
            "owner_id": "692107548034",
            "private_ip": "10.5.1.110",
            "private_ip_list": [
              "10.5.1.110"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.5.1.110"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ffd25d0d9a2ab418"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04126f5dd58a7e10f"
          },
          "dependencies": [
            "module.vpc_launch.aws_security_group.nat_instance_sg",
            "module.vpc_launch.aws_subnet.eks_pubsubnet",
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_launch",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "EKS_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:route-table/rtb-0eca3c021121a4dde",
            "id": "rtb-0eca3c021121a4dde",
            "owner_id": "692107548034",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a78b1e3e0d880c69",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "anuvind_anuvind_vpc_ROUTE_TABLE"
            },
            "tags_all": {
              "Name": "anuvind_anuvind_vpc_ROUTE_TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6d62942fef65a24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_launch.aws_internet_gateway.EKS_gateway",
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_launch",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "EKS_route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:route-table/rtb-0dafd761848aa866b",
            "id": "rtb-0dafd761848aa866b",
            "owner_id": "692107548034",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0d75538db84a61b6b",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "anuvind_PRIVATE_anuvind_vpc_ROUTE_TABLE"
            },
            "tags_all": {
              "Name": "anuvind_PRIVATE_anuvind_vpc_ROUTE_TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6d62942fef65a24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_launch.aws_network_interface.public_instance_network_interface",
            "module.vpc_launch.aws_security_group.nat_instance_sg",
            "module.vpc_launch.aws_subnet.eks_pubsubnet",
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_launch",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "EKS_ASSO",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe47e04afb83dd9d",
            "route_table_id": "rtb-0eca3c021121a4dde",
            "subnet_id": "subnet-04126f5dd58a7e10f"
          },
          "dependencies": [
            "module.vpc_launch.aws_internet_gateway.EKS_gateway",
            "module.vpc_launch.aws_route_table.EKS_route_table",
            "module.vpc_launch.aws_subnet.eks_pubsubnet",
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad8ff8bb7b9c80a1",
            "route_table_id": "rtb-0eca3c021121a4dde",
            "subnet_id": "subnet-0b448c0ccbab057bb"
          },
          "dependencies": [
            "module.vpc_launch.aws_internet_gateway.EKS_gateway",
            "module.vpc_launch.aws_route_table.EKS_route_table",
            "module.vpc_launch.aws_subnet.eks_pubsubnet",
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_launch",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "EKS_ASSO_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b5315d76f9a7fd1",
            "route_table_id": "rtb-0dafd761848aa866b",
            "subnet_id": "subnet-05549b98c926245cf"
          },
          "dependencies": [
            "module.vpc_launch.aws_network_interface.public_instance_network_interface",
            "module.vpc_launch.aws_route_table.EKS_route_table_private",
            "module.vpc_launch.aws_security_group.nat_instance_sg",
            "module.vpc_launch.aws_subnet.eks_privsubnet",
            "module.vpc_launch.aws_subnet.eks_pubsubnet",
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097fdce93c5de6cee",
            "route_table_id": "rtb-0dafd761848aa866b",
            "subnet_id": "subnet-0dcdf766e5854f787"
          },
          "dependencies": [
            "module.vpc_launch.aws_network_interface.public_instance_network_interface",
            "module.vpc_launch.aws_route_table.EKS_route_table_private",
            "module.vpc_launch.aws_security_group.nat_instance_sg",
            "module.vpc_launch.aws_subnet.eks_privsubnet",
            "module.vpc_launch.aws_subnet.eks_pubsubnet",
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_launch",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:security-group/sg-0ffd25d0d9a2ab418",
            "description": "Security group for NAT instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffd25d0d9a2ab418",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.5.3.0/24",
                  "10.5.4.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.5.3.0/24",
                  "10.5.4.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "anuvind_nat-instance-sg",
            "name_prefix": "",
            "owner_id": "692107548034",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6d62942fef65a24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_launch",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_privsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:subnet/subnet-05549b98c926245cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.5.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05549b98c926245cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692107548034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anuvind_vpc_1"
            },
            "tags_all": {
              "Name": "anuvind_vpc_1"
            },
            "vpc_id": "vpc-0b6d62942fef65a24"
          },
          "dependencies": [
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:subnet/subnet-0dcdf766e5854f787",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.5.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcdf766e5854f787",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692107548034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anuvind_vpc_2"
            },
            "tags_all": {
              "Name": "anuvind_vpc_2"
            },
            "vpc_id": "vpc-0b6d62942fef65a24"
          },
          "dependencies": [
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_launch",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:subnet/subnet-04126f5dd58a7e10f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04126f5dd58a7e10f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692107548034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anuvind_vpc_1"
            },
            "tags_all": {
              "Name": "anuvind_vpc_1"
            },
            "vpc_id": "vpc-0b6d62942fef65a24"
          },
          "dependencies": [
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:subnet/subnet-0b448c0ccbab057bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b448c0ccbab057bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692107548034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anuvind_vpc_2"
            },
            "tags_all": {
              "Name": "anuvind_vpc_2"
            },
            "vpc_id": "vpc-0b6d62942fef65a24"
          },
          "dependencies": [
            "module.vpc_launch.aws_vpc.vpc_eks_learn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_launch",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_eks_learn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:692107548034:vpc/vpc-0b6d62942fef65a24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-0a0904f7f7dc9d08b",
            "default_route_table_id": "rtb-069e6b1444d69bfc1",
            "default_security_group_id": "sg-0d7b7884ed8cc7f42",
            "dhcp_options_id": "dopt-beaaa5d9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b6d62942fef65a24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069e6b1444d69bfc1",
            "owner_id": "692107548034",
            "tags": {
              "Name": "anuvind_vpc"
            },
            "tags_all": {
              "Name": "anuvind_vpc"
            }
          }
        }
      ]
    }
  ]
}